<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/img_login"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cvLoginContent"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#80FFFFFF"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlLoginContent"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLblItsId"
                    android:layout_width="wrap_content"
                    android:text="@string/its_id"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etItsId"
                    android:layout_width="match_parent"
                    android:hint="@string/its_id"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_below="@+id/tvLblItsId"
                    android:textSize="18dp"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLblDoYouHavePassword"
                    android:layout_width="wrap_content"
                    android:text="@string/do_you_have_password"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/etItsId"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

                <Switch
                    android:id="@+id/passwordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:thumbTextPadding="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/switch_theme"
                    android:layout_below="@+id/tvLblDoYouHavePassword"
                    android:text="@string/yes" />

                <TextView
                    android:id="@+id/tvLblPassword"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/passwordSwitch"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_below="@+id/tvLblPassword"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/etPassword"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:background="@drawable/btn_rounded_bg"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <include
        android:id="@+id/loginProgress"
        layout="@layout/app_progress_bar"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" />
</RelativeLayout>